# 408RAG

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
UserTMP/vector_db/chroma/: chroma.sqlite3
data_base/knowledge_db/easy_rl/: 强化学习入门指南.srt  强化学习入门指南.tsv  强化学习入门指南.txt  强化学习入门指南.vtt
data_base/knowledge_db/prompt_engineering/: 1. 简介 Introduction.md  2. 提示原则 Guidelines.md  3. 迭代优化 Iterative.md  4. 文本概括 Summarizing.md  5. 推断 Inferring.md  6. 文本转换 Transforming.md  7. 文本扩展 Expanding.md  8. 聊天机器人 Chatbot.md  9. 总结 Summary.md
dxyu_DB/vector_db/chroma/207aec72-da39-4c4f-9828-934494617067/: index_metadata.pickle
notebook/: buildDB.py  streamlit_app.py  test.py
