[project]
name = "llm-universe-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.6",
    "langchain-community>=0.3.21",
    "pydantic==2.9.2",
    "pymupdf>=1.25.5",
    "streamlit>=1.44.1",
    "zhipuai>=2.1.5.20250421",
]
